lang.java.statics.test/tests/positive/classes/constructors/declaration.yes.javtest
STATIX ok
JAVAC  ok

[Point]
class Point {
    public int x, y;
    public Point(int x, int y) {
        this.x = x;
        this.y = y;
    }
}
