lang.java.statics.test/tests/negative/classes/inheritance/circular.no.javtest
STATIX fail java\.classes\.no-class-cycle
JAVAC  fail cyclic

[Point]
public class Point extends ColoredPoint{
    int color;
}

[ColoredPoint]
class ColoredPoint extends Point {
    int color;
}
